Update API_BASE URL to Hetzner API

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
     <script>
         // ⚠️ CHANGE THIS to your Hetzner API URL
-        const API_BASE = 'https://api.yourdomain.com';
+        const API_BASE = 'http://135.181.150.230/notes';
         
         let jobId = null;
         
