--- a/notes/index.html
+++ b/notes/index.html
@@ -313,7 +313,7 @@
 
     <script>
         // ⚠️ CHANGE THIS to your Hetzner API URL
-        const API_BASE = 'http://135.181.150.230/notes';
+        const API_BASE = 'https://api.takeonanything.com';
         
         let jobId = null;
         
