--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>PAUL STAPLES</title>
+  <script async src="https://plausible.io/js/pa-jluo04lsBer5Kjum87QyY.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)}
+</script>
   <style>
     html, body { height: 100%; margin: 0; }
     body {
