--- a/paulbot/index.html
+++ b/paulbot/index.html
@@ -1,1 +1,114 @@
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Paulbot</title>
 
+  <script async src="https://plausible.io/js/pa-jluo04lsBer5Kjum87QyY.js"></script>
+  <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)}
+  </script>
+
+  <style>
+    *{box-sizing:border-box}
+    body{
+      margin:0; min-height:100vh; padding:24px;
+      display:flex; justify-content:center; align-items:flex-start;
+      font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif;
+      background:#fff; color:#111;
+    }
+    .wrap{width:100%; max-width:720px}
+    h1{
+      margin:0 0 14px 0;
+      font-size: clamp(34px, 5vw, 64px);
+      letter-spacing: .08em;
+      text-transform: uppercase;
+    }
+    .chat{
+      border:1px solid #ddd; border-radius:16px;
+      padding:16px; min-height: 320px;
+    }
+    .msg{margin:0 0 12px 0; line-height:1.5}
+    .me{font-weight:600}
+    .bot{opacity:.9}
+    form{display:flex; gap:10px; margin-top:12px}
+    input{
+      flex:1; padding:12px 14px; font-size:16px;
+      border:1px solid #ddd; border-radius:999px;
+    }
+    button{
+      padding:12px 16px; font-size:16px;
+      border-radius:999px; border:1px solid #111;
+      background:#111; color:#fff; cursor:pointer;
+    }
+    button:disabled{opacity:.6; cursor:not-allowed}
+    .hint{margin-top:10px; font-size:13px; color:#666}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <h1>PAULBOT</h1>
+
+    <div id="chat" class="chat">
+      <p class="msg bot">Say something. I’ll answer in the Paul Staples lane.</p>
+    </div>
+
+    <form id="form">
+      <input id="input" placeholder="Ask Paulbot…" autocomplete="off" />
+      <button id="send">Send</button>
+    </form>
+
+    <div class="hint">This page is static (GitHub). The brain lives on the API server (Hetzner).</div>
+  </div>
+
+<script>
+  const API_BASE = "https://api.takeonanything.com";
+
+  const chatEl = document.getElementById("chat");
+  const form = document.getElementById("form");
+  const input = document.getElementById("input");
+  const send = document.getElementById("send");
+
+  function addMsg(cls, label, text){
+    const p = document.createElement("p");
+    p.className = `msg ${cls}`;
+    p.innerHTML = `<span class="${cls}">${label}:</span> ${escapeHtml(text)}`;
+    chatEl.appendChild(p);
+    chatEl.scrollTop = chatEl.scrollHeight;
+  }
+
+  function escapeHtml(s){
+    return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
+  }
+
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const text = input.value.trim();
+    if (!text) return;
+
+    addMsg("me", "You", text);
+    input.value = "";
+    send.disabled = true;
+
+    try {
+      const res = await fetch(`${API_BASE}/paulbot/chat`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ message: text })
+      });
+
+      const data = await res.json();
+      if (!res.ok) throw new Error(data?.error || "Request failed");
+
+      addMsg("bot", "Paulbot", data.reply || "(no reply)");
+    } catch (err) {
+      addMsg("bot", "Paulbot", `Error: ${err.message}`);
+    } finally {
+      send.disabled = false;
+      input.focus();
+    }
+  });
+</script>
+</body>
+</html>
