--- a/paulbot/index.html
+++ b/paulbot/index.html
@@ -1,65 +1,100 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Paulbot</title>
+  <title>PAULBOT</title>
 
+  <!-- Plausible analytics -->
   <script async src="https://plausible.io/js/pa-jluo04lsBer5Kjum87QyY.js"></script>
   <script>
     window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)}
   </script>
 
   <style>
-    *{box-sizing:border-box}
-    body{
-      margin:0; min-height:100vh; padding:24px;
-      display:flex; justify-content:center; align-items:flex-start;
-      font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Arial,sans-serif;
-      background:#fff; color:#111;
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      padding: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+      background: #fff;
+      color: #111;
     }
-    .wrap{width:100%; max-width:720px}
-    h1{
-      margin:0 0 14px 0;
-      font-size: clamp(34px, 5vw, 64px);
-      letter-spacing: .08em;
+    .wrap { width: 100%; max-width: 760px; }
+    h1 {
+      margin: 0;
+      font-size: clamp(52px, 7vw, 104px);
+      letter-spacing: 0.11em;
+      text-transform: uppercase;
+      line-height: 1;
+    }
+    .sub {
+      margin: 10px 0 18px 0;
+      font-size: 13px;
+      color: #555;
+      letter-spacing: 0.08em;
       text-transform: uppercase;
     }
-    .chat{
-      border:1px solid #ddd; border-radius:16px;
-      padding:16px; min-height: 320px;
+    .chat {
+      border: 1px solid #e5e5e5;
+      border-radius: 18px;
+      padding: 16px;
+      min-height: 380px;
+      background: #fff;
+      overflow-y: auto;
     }
-    .msg{margin:0 0 12px 0; line-height:1.5}
-    .me{font-weight:600}
-    .bot{opacity:.9}
-    form{display:flex; gap:10px; margin-top:12px}
-    input{
-      flex:1; padding:12px 14px; font-size:16px;
-      border:1px solid #ddd; border-radius:999px;
+    .msg { margin: 0 0 12px 0; line-height: 1.55; font-size: 15px; }
+    .label { font-weight: 800; margin-right: 8px; letter-spacing: .02em; }
+    form { display: flex; gap: 10px; margin-top: 12px; }
+    input {
+      flex: 1;
+      padding: 12px 14px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 999px;
+      outline: none;
     }
-    button{
-      padding:12px 16px; font-size:16px;
-      border-radius:999px; border:1px solid #111;
-      background:#111; color:#fff; cursor:pointer;
+    input:focus { border-color: #aaa; }
+    button {
+      padding: 12px 16px;
+      font-size: 16px;
+      border-radius: 999px;
+      border: 1px solid #111;
+      background: #111;
+      color: #fff;
+      cursor: pointer;
     }
-    button:disabled{opacity:.6; cursor:not-allowed}
-    .hint{margin-top:10px; font-size:13px; color:#666}
+    button:disabled { opacity: 0.6; cursor: not-allowed; }
+    .fineprint {
+      margin-top: 14px;
+      font-size: 12px;
+      color: #777;
+      line-height: 1.5;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
     <h1>PAULBOT</h1>
+    <div class="sub">PAUL STAPLES, SIMULATED. DIRECT. FALLIBLE.</div>
 
     <div id="chat" class="chat">
-      <p class="msg bot">Say something. I’ll answer in the Paul Staples lane.</p>
+      <p class="msg"><span class="label">Paulbot:</span>Talk.</p>
     </div>
 
     <form id="form">
-      <input id="input" placeholder="Ask Paulbot…" autocomplete="off" />
+      <input id="input" placeholder="Say something." autocomplete="off" />
       <button id="send">Send</button>
     </form>
 
-    <div class="hint">This page is static (GitHub). The brain lives on the API server (Hetzner).</div>
+    <div class="fineprint">
+      Disclaimer: automated output. Not professional advice. Verify anything that matters.
+    </div>
   </div>
 
 <script>
@@ -70,16 +105,18 @@
   const input = document.getElementById("input");
   const send = document.getElementById("send");
 
-  function addMsg(cls, label, text){
-    const p = document.createElement("p");
-    p.className = `msg ${cls}`;
-    p.innerHTML = `<span class="${cls}">${label}:</span> ${escapeHtml(text)}`;
-    chatEl.appendChild(p);
-    chatEl.scrollTop = chatEl.scrollHeight;
+  function escapeHtml(s) {
+    return String(s).replace(/[&<>"']/g, c => ({
+      "&":"&amp;","<":"&lt;",">":"&gt;","\"":"&quot;","'":"&#39;"
+    }[c]));
   }
 
-  function escapeHtml(s){
-    return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
+  function addMsg(label, text) {
+    const p = document.createElement("p");
+    p.className = "msg";
+    p.innerHTML = `<span class="label">${escapeHtml(label)}:</span>${escapeHtml(text)}`;
+    chatEl.appendChild(p);
+    chatEl.scrollTop = chatEl.scrollHeight;
   }
 
   form.addEventListener("submit", async (e) => {
@@ -87,7 +124,7 @@
     const text = input.value.trim();
     if (!text) return;
 
-    addMsg("me", "You", text);
+    addMsg("You", text);
     input.value = "";
     send.disabled = true;
 
@@ -98,12 +135,12 @@
         body: JSON.stringify({ message: text })
       });
 
-      const data = await res.json();
-      if (!res.ok) throw new Error(data?.error || "Request failed");
+      const data = await res.json().catch(() => ({}));
+      if (!res.ok) throw new Error(data?.error || `Request failed (${res.status})`);
 
-      addMsg("bot", "Paulbot", data.reply || "(no reply)");
+      addMsg("Paulbot", data.reply || "");
     } catch (err) {
-      addMsg("bot", "Paulbot", `Error: ${err.message}`);
+      addMsg("Paulbot", err.message);
     } finally {
       send.disabled = false;
       input.focus();
